# x-automation

./: .env.example  .gitignore  README.md  feeds.yaml.example  prompts.yaml.example  pyproject.toml  tags.json.example
docs/: CURSOR_AGENTS.md
inbox/cursor/: draft.schema.json
src/x_automation/: __init__.py  __main__.py  auth.py  cli.py  config.py  delete.py  drafts.py  filters.py  grok.py  inbox.py  ingest.py  publish.py  rate_limit.py  rss.py  timeline.py
